trunk/Archive2/e1/9c15bb12fe6131/output
main.cpp: In member function 'auto A::go()::<lambda()>::m::get(std::false_type, std::nullptr_t&)':
main.cpp:24:34: error: request for member 'field' in 'k', which is of non-class type 'std::nullptr_t'
                         return k.field;
                                  ^
main.cpp: In member function 'void A::go()':
main.cpp:17:14: warning: unused variable 'o' [-Wunused-variable]
         auto o = [&k]{
              ^
